# ninja-obs-plugin

./: .clang-format  .gitignore  .mailmap  AGENTS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  QUICKSTART.md  README.md  RELEASE_COMPLIANCE.md  SECURITY_AND_TRUST.md  TESTING_OBS_MANUAL.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  clang-format.yml  pages.yml
data/locale/: de-DE.ini  en-GB.ini  en-US.ini  en.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  ru-RU.ini  tr-TR.ini  zh-CN.ini
docs/: index.html  local-stress-testing.md  macos-installer-validation.md  vdoninja-workflow-map.md  windows-obs32-build-and-validation.md
packaging/windows/: installer-Windows.iss
scripts/: build-installer-macos.sh  build-installer-windows.ps1  check-build-requirements-windows.ps1  install-macos.sh  install-package-linux.sh  install-package-macos.sh  install-package-windows.cmd  install-package-windows.ps1  obs-websocket-capture-scene.cjs  obs-websocket-vdoninja-chaos-check.cjs  obs-websocket-vdoninja-concurrent-check.cjs  obs-websocket-vdoninja-edge-stress.cjs  obs-websocket-vdoninja-move-benchmark.cjs  obs-websocket-vdoninja-publish-check.cjs  obs-websocket-vdoninja-source-check.cjs  playwright-vdo-firefox-view-check.cjs  playwright-vdo-matrix-check.cjs  playwright-vdo-publish-session.cjs  playwright-vdo-view-check.cjs  release.ps1  run-vdoninja-alpha-concurrent-smoke.ps1  run-vdoninja-alpha-teardown-smoke.ps1  run-vdoninja-chaos-stress.ps1  run-vdoninja-gamecapture-spout-smoke.ps1  run-vdoninja-local-stress.ps1  run-vdoninja-publish-smoke.ps1  run-vdoninja-seeded-chaos.ps1  run-vdoninja-source-concurrent-smoke.ps1  run-vdoninja-source-edge-stress.ps1  run-vdoninja-source-fault-smoke.ps1  run-vdoninja-source-lifecycle-stress.ps1  run-vdoninja-source-move-benchmark.ps1  run-vdoninja-source-smoke.ps1  sync-release-secrets-windows.ps1  test-alpha-validation-common.ps1  uninstall-package-macos.sh  uninstall-package-windows.cmd  validate-macos-installer.sh  vtube-studio-window-churn.ps1
src/: plugin-main.cpp  plugin-main.h  vdoninja-alpha-sync.cpp  vdoninja-alpha-sync.h  vdoninja-auto-inbound-state.h  vdoninja-auto-scene-manager.cpp  vdoninja-auto-scene-manager.h  vdoninja-common.h  vdoninja-data-channel.cpp  vdoninja-data-channel.h  vdoninja-dock.cpp  vdoninja-dock.h  vdoninja-ice-candidate-queue.cpp  vdoninja-ice-candidate-queue.h  vdoninja-layout.cpp  vdoninja-layout.h  vdoninja-output.cpp  vdoninja-output.h  vdoninja-peer-manager.cpp  vdoninja-peer-manager.h  vdoninja-reliability.cpp  vdoninja-reliability.h  vdoninja-rtp-utils.cpp  vdoninja-rtp-utils.h  vdoninja-signaling-protocol.cpp  vdoninja-signaling-protocol.h  vdoninja-signaling.cpp  vdoninja-signaling.h  vdoninja-source.cpp  vdoninja-source.h  vdoninja-system-cpu.cpp  vdoninja-system-cpu.h  vdoninja-track-utils.h  vdoninja-utils.cpp  vdoninja-utils.h
tests/: test-alpha-sync.cpp  test-auto-inbound.cpp  test-data-channel.cpp  test-ice-candidate-queue.cpp  test-json.cpp  test-layout.cpp  test-peer-manager.cpp  test-reliability.cpp  test-signaling-protocol.cpp  test-signaling-state.cpp  test-system-cpu.cpp  test-utils.cpp  test-vp9-rtp.cpp
tests/e2e/: vdo-config.js  vdoninja-multi-viewers.spec.js  vdoninja-publish-view-reload.spec.js  vdoninja-special-char-password.spec.js  vdoninja-view.spec.js  vdoninja-vp9-view.spec.js
tests/stubs/rtc/: rtc.hpp
tests/tools/: gc-motion-demo.html
tests/tools/vp9-alpha-publisher/: main.cpp
